# lsd2dsl

./: .gitignore  .gitmodules  CMakeLists.txt  DslWriter.cpp  DslWriter.h  LICENSE  README.md  ZipWriter.cpp  ZipWriter.h  decoder.cpp  install.cmake.in  tests.cpp  version.h  version.h.in
app/: CMakeLists.txt  MainWindow.cpp  decoder.cpp
console/: CMakeLists.txt  decoder.cpp
dictlsd/: AbbreviationDictionaryDecoder.cpp  ArticleHeading.cpp  ArticleHeading.h  BitStream.cpp  BitStream.h  CMakeLists.txt  CachePage.h  DictionaryReader.cpp  DictionaryReader.h  IDictionaryDecoder.h  LSAReader.cpp  LSAReader.h  LSDOverlayReader.cpp  LSDOverlayReader.h  LenTable.cpp  LenTable.h  SystemDictionaryDecoder.cpp  SystemDictionaryDecoder.h  UnicodePathFile.h  UserDictionaryDecoder.cpp  UserDictionaryDecoder.h  WavWriter.cpp  WavWriter.h  lsd.cpp  lsd.h  tools.cpp  tools.h
duden/: Archive.cpp  Archive.h  CMakeLists.txt  Dictionary.cpp  Dictionary.h  Duden.cpp  Duden.h  HtmlRenderer.cpp  IFileSystem.cpp  IFileSystem.h  InfFile.cpp  InfFile.h  LdFile.cpp  LdFile.h  TableRenderer.cpp  TableRenderer.h  Writer.cpp  Writer.h
duden/text/: Parser.cpp  Printers.cpp  Printers.h  Reference.cpp  Reference.h  Table.cpp  Table.h  TextRun.cpp  TextRun.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
lib/: CMakeLists.txt
lib/common/: BitStream.cpp  BitStream.h  CMakeLists.txt  CommonTools.cpp  CommonTools.h  DslWriter.cpp  DslWriter.h  Log.cpp  Log.h  Stopwatch.h  WavWriter.cpp  WavWriter.h  ZipWriter.cpp  ZipWriter.h  bformat.h  version.h.in
lib/duden/: AdpDecoder.cpp  AdpDecoder.h  Archive.cpp  Archive.h  CMakeLists.txt  Dictionary.cpp  Dictionary.h  Duden.cpp  Duden.h  FsdFile.cpp  FsdFile.h  HtmlRenderer.cpp  HtmlRenderer.h  IFileSystem.cpp  IFileSystem.h  IResourceArchiveReader.h  InfFile.cpp  InfFile.h  LdFile.cpp  LdFile.h  TableRenderer.cpp  TableRenderer.h  Writer.cpp  Writer.h
lib/duden/text/: Parser.cpp  Parser.h  Printers.cpp  Printers.h  Reference.cpp  Reference.h  Table.h  TextRun.cpp  TextRun.h
lib/duden/unzip/: globals.h  inflate.c  inflate.h
lib/lingvo/: AbbreviationDictionaryDecoder.cpp  AbbreviationDictionaryDecoder.h  ArticleHeading.cpp  ArticleHeading.h  CMakeLists.txt  CachePage.cpp  CachePage.h  DictionaryReader.cpp  DictionaryReader.h  IDictionaryDecoder.cpp  IDictionaryDecoder.h  LSAReader.cpp  LSAReader.h  LSDOverlayReader.cpp  LSDOverlayReader.h  LenTable.cpp  LenTable.h  OggReader.cpp  OggReader.h  SystemDictionaryDecoder.cpp  SystemDictionaryDecoder.h  UserDictionaryDecoder.cpp  UserDictionaryDecoder.h  WriteDsl.cpp  WriteDsl.h  lsd.cpp  lsd.h  tools.cpp  tools.h
lib/lsd/: AbbreviationDictionaryDecoder.h  ArticleHeading.cpp  ArticleHeading.h  BitStream.cpp  BitStream.h  CachePage.cpp  DictionaryReader.cpp  IDictionaryDecoder.cpp  LSAReader.cpp  LSAReader.h  LSDOverlayReader.cpp  LenTable.cpp  OggReader.cpp  OggReader.h  SystemDictionaryDecoder.cpp  UnicodePathFile.cpp  UserDictionaryDecoder.cpp  UserDictionaryDecoder.h  WavWriter.cpp  lsd.cpp  lsd.h  tools.cpp  tools.h
lib/minizip/: CMakeLists.txt
qtgui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
scripts/: make_idx_bof.py  regression.py
scripts/appimage/: lsd2dsl.desktop  make_appimage.sh
simple_testdict1/: headingsTestDict1_12.lsd  headingsTestDict1_x3.lsd  overlay_12.lsd  overlay_x3.lsd  test.lsd  testext.dsl  unsorted_testdict.dsl  variants_testdict.lsd
tests/: CMakeLists.txt  duden-tests.cpp  lingvo-tests.cpp  regression.py  test-utils.h  tests.cpp
tests/duden_testfiles/: HicNode10c5  HicNode6a  HicNode99  article1  block_2847_heading_encoding  block_hic_v6  bofFixedDeflateBlock  duden_encoded_pic  fsd_blob.inf  fsi-pack-references-primary-pack.inf  fsiBBlock  fsiCBlock  fsiCBlock2  fsiCBlock3  fsiCBlock4  fsiSingleItemBlock  fsiSingleItemBlockUnicode  inconsistent_primary_file_names.inf  simple.inf  simple.ld  spaces_after_semicolon.inf  tab_file  tab_file_embedded_image  table1  table_curly_braces  table_in_table_cell  table_merged_cells  table_several_extra_cells_and_footer  two-way-dict-no-title.inf  two-way-dict.inf
tests/simple_testdict1/: headingsTestDict1.dsl  headingsTestDict1_x5.lsd  overlay.dsl  overlay_x5.lsd  test.ann  test.dsl  testext.lsd  unsorted_testdict.lsd  variants_testdict.dsl  variants_testdict2.dsl  variants_testdict2.lsd
